{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 37,
  "lineage": "c5826d59-6b4e-61b6-ece7-9716a722b223",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077724106420:internet-gateway/igw-097d4cbf8ccad96c6",
            "id": "igw-097d4cbf8ccad96c6",
            "owner_id": "077724106420",
            "tags": {
              "Name": "igw_vpc10"
            },
            "tags_all": {
              "Name": "igw_vpc10"
            },
            "vpc_id": "vpc-0c822ef6bd6451b79"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb-aws",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:077724106420:loadbalancer/app/lb-aws/5b08e9cfa38e62fc",
            "arn_suffix": "app/lb-aws/5b08e9cfa38e62fc",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-aws-487358892.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:077724106420:loadbalancer/app/lb-aws/5b08e9cfa38e62fc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-aws",
            "security_groups": [
              "sg-0f4ef3d0243ad86c3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-041f10e15fe46a5fb"
              },
              {
                "subnet_id": "subnet-0e6d96d29056956e0"
              }
            ],
            "subnets": [
              "subnet-041f10e15fe46a5fb",
              "subnet-0e6d96d29056956e0"
            ],
            "tags": {
              "Name": "lb-aws"
            },
            "tags_all": {
              "Name": "lb-aws"
            },
            "vpc_id": "vpc-0c822ef6bd6451b79",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg_vpc10_public",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_app_notify",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:077724106420:listener/app/lb-aws/5b08e9cfa38e62fc/8cfa47d48d07a30b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:077724106420:targetgroup/aws-tg/0a08b01fb1a9ae15",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:077724106420:listener/app/lb-aws/5b08e9cfa38e62fc/8cfa47d48d07a30b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:077724106420:loadbalancer/app/lb-aws/5b08e9cfa38e62fc",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb-aws",
            "aws_lb_target_group.aws_tg",
            "aws_security_group.sg_vpc10_public",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "aws_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:077724106420:targetgroup/aws-tg/0a08b01fb1a9ae15",
            "arn_suffix": "targetgroup/aws-tg/0a08b01fb1a9ae15",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:077724106420:targetgroup/aws-tg/0a08b01fb1a9ae15",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "aws-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "aws_tg"
            },
            "tags_all": {
              "Name": "aws_tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0c822ef6bd6451b79"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Private_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077724106420:route-table/rtb-0b6121e53b21c7b53",
            "id": "rtb-0b6121e53b21c7b53",
            "owner_id": "077724106420",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c822ef6bd6451b79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_Route_Table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077724106420:route-table/rtb-0e2cf486815b39fa6",
            "id": "rtb-0e2cf486815b39fa6",
            "owner_id": "077724106420",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-097d4cbf8ccad96c6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c822ef6bd6451b79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0921fad32c7bd7ee9",
            "route_table_id": "rtb-0e2cf486815b39fa6",
            "subnet_id": "subnet-041f10e15fe46a5fb"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_route_table.Public_Route_Table",
            "aws_subnet.sn_vpc10_pub_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0106ad11065b786e2",
            "route_table_id": "rtb-0e2cf486815b39fa6",
            "subnet_id": "subnet-0e6d96d29056956e0"
          },
          "dependencies": [
            "aws_internet_gateway.igw_vpc10",
            "aws_route_table.Public_Route_Table",
            "aws_subnet.sn_vpc10_pub_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0486a9389b1052638",
            "route_table_id": "rtb-0b6121e53b21c7b53",
            "subnet_id": "subnet-09dce00f1398ba86d"
          },
          "dependencies": [
            "aws_route_table.Private_Route_Table",
            "aws_subnet.sn_vpc10_priv_1a",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f65a5725532a22ab",
            "route_table_id": "rtb-0b6121e53b21c7b53",
            "subnet_id": "subnet-09ed13cded1d86d4a"
          },
          "dependencies": [
            "aws_route_table.Private_Route_Table",
            "aws_subnet.sn_vpc10_priv_1c",
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpc10_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077724106420:security-group/sg-03e76bef0ba4d9155",
            "description": "sg vpc10 priv",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to all",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03e76bef0ba4d9155",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All from 10.0.0.0/16",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sg_vpc10_private",
            "name_prefix": "",
            "owner_id": "077724106420",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Private Security Group"
            },
            "tags_all": {
              "Name": "Private Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c822ef6bd6451b79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_vpc10_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077724106420:security-group/sg-0f4ef3d0243ad86c3",
            "description": "Public Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All to All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f4ef3d0243ad86c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP/22 from All",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP/80 from All",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "All from 10.0.0.0/16",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "sg_vpc10_public",
            "name_prefix": "",
            "owner_id": "077724106420",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Public Security Group"
            },
            "tags_all": {
              "Name": "Public Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c822ef6bd6451b79"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_priv_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077724106420:subnet/subnet-09dce00f1398ba86d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09dce00f1398ba86d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077724106420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_priv_1a"
            },
            "tags_all": {
              "Name": "sn_vpc10_priv_1a"
            },
            "vpc_id": "vpc-0c822ef6bd6451b79"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_priv_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077724106420:subnet/subnet-09ed13cded1d86d4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ed13cded1d86d4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077724106420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_pub_1c"
            },
            "tags_all": {
              "Name": "sn_vpc10_pub_1c"
            },
            "vpc_id": "vpc-0c822ef6bd6451b79"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_pub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077724106420:subnet/subnet-041f10e15fe46a5fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-041f10e15fe46a5fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077724106420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_pub_1a"
            },
            "tags_all": {
              "Name": "sn_vpc10_pub_1a"
            },
            "vpc_id": "vpc-0c822ef6bd6451b79"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn_vpc10_pub_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077724106420:subnet/subnet-0e6d96d29056956e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6d96d29056956e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "077724106420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn_vpc10_pub_1c"
            },
            "tags_all": {
              "Name": "sn_vpc10_pub_1c"
            },
            "vpc_id": "vpc-0c822ef6bd6451b79"
          },
          "dependencies": [
            "aws_vpc.vpc10"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc10",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:077724106420:vpc/vpc-0c822ef6bd6451b79",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-045c78489c81f2f74",
            "default_route_table_id": "rtb-0e244749d7c78b991",
            "default_security_group_id": "sg-0ce2e89f0610418ca",
            "dhcp_options_id": "dopt-0a420cc2a3c4d1596",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c822ef6bd6451b79",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e244749d7c78b991",
            "owner_id": "077724106420",
            "tags": {
              "Name": "vpc10"
            },
            "tags_all": {
              "Name": "vpc10"
            }
          }
        }
      ]
    }
  ]
}